added header and footer

--- a/index.html
+++ b/index.html
@@ -7,28 +7,36 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="navbar">Quiz Leen</div>
-    <div class="quizContainer" id="quiz">
-        <div class="quizHeader">
-            <h3>Question:</h3>
-            <h3 id="question">Question text</h3>
-        </div>
-        <ul>
-            <li>
-                <input type="radio" id="a" name="answer" class="answer"><label id="a_text" for="a">Option</label>
-            </li>
-            <li>
-                <input type="radio" id="b" name="answer" class="answer"><label id="b_text" for="b">Option</label>
-            </li>
-            <li>
-                <input type="radio" id="c" name="answer" class="answer"><label id="c_text" for="c">Option</label>
-            </li>
-            <li>
-                <input type="radio" id="d" name="answer" class="answer"><label id="d_text" for="d">Option</label>
-            </li>
-        </ul>
-        <button id="submit">Submit</button>
-    </div>
+    <header>
+        <div class="title">Quiz Leen</div>
+        <button>alaki</button>
+    </header>
+    <main>
+        <div class="quizContainer" id="quiz">
+                <div class="quizHeader">
+                    <h3>Question:</h3>
+                    <h3 id="question">Question text</h3>
+                </div>
+                <ul>
+                    <li>
+                        <input type="radio" id="a" name="answer" class="answer"><label id="a_text" for="a">Option</label>
+                    </li>
+                    <li>
+                        <input type="radio" id="b" name="answer" class="answer"><label id="b_text" for="b">Option</label>
+                    </li>
+                    <li>
+                        <input type="radio" id="c" name="answer" class="answer"><label id="c_text" for="c">Option</label>
+                    </li>
+                    <li>
+                        <input type="radio" id="d" name="answer" class="answer"><label id="d_text" for="d">Option</label>
+                    </li>
+                </ul>
+                <button id="submit">Submit</button>
+            </div>
+    </main>
+    <footer>
+        <div class="navbar">this is a footer</div>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
