--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header>
         <div class="title">Quiz Leen</div>
         <button>alaki</button>
+        <button>second alaki</button>
     </header>
     <main>
         <div class="quizContainer" id="quiz">
