--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
     <header>
         <div class="title">Quiz Leen</div>
-        <button>alaki</button>
-        <button>second alaki</button>
+        <button>Home</button>
+        <button>Topics</button>
+        <button>Articles</button>
     </header>
     <main>
         <div class="quizContainer" id="quiz">
@@ -36,7 +37,9 @@
             </div>
     </main>
     <footer>
-        <div class="navbar">this is a footer</div>
+        <div class="navbar">
+            <p>Created by Pourya Fahimi, All Rights reserved</p>
+        </div>
     </footer>
     <script src="script.js"></script>
 </body>
