--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="title">Quiz Leen</div>
-        <button>Home</button>
+        <button onclick="location.reload()">Home</button>
         <button>Topics</button>
         <button>Articles</button>
     </header>
@@ -40,6 +40,9 @@
         <div class="navbar">
             <p>Created by Pourya Fahimi, All Rights reserved</p>
         </div>
+        <a href="https://github.com/PouryaFahimi">
+            <img src="pics/githubLogo.png" alt="githubLogo">
+        </a>
     </footer>
     <script src="script.js"></script>
 </body>
