--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <button>Articles</button>
     </header>
     <main>
+        <h2>heading for test</h2>
         <div class="quizContainer" id="quiz">
                 <div class="quizHeader">
                     <h3>Question:</h3>
@@ -35,6 +36,7 @@
                 </ul>
                 <button id="submit">Submit</button>
             </div>
+            <h3 id="feedback"></h3>
     </main>
     <footer>
         <div class="navbar">
