ready for transform between pages

--- a/homePage.html
+++ b/homePage.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <header>
-        <div class="title">Quiz Leen</div>
-        <button onclick="location.reload()">Home</button>
-        <button>Topics</button>
-        <button>Articles</button>
+        <p id="title">Quiz Leen</p>
+        <a href="homePage.html">Home</a>
+        <a href="topics.html">Topics</a>
+        <a href="">Articles</a>
     </header>
     <main>
         <h2>heading for test</h2>
@@ -42,7 +42,7 @@
         <div class="navbar">
             <p>Created by Pourya Fahimi, All Rights reserved</p>
         </div>
-        <a href="https://github.com/PouryaFahimi">
+        <a id="imgLink" href="https://github.com/PouryaFahimi">
             <img src="pics/githubLogo.png" alt="githubLogo">
         </a>
     </footer>
