--- a/examPage.html
+++ b/examPage.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <header>
-        <div class="title">Quiz Leen</div>
-        <button onclick="location.reload()">Home</button>
-        <button>Topics</button>
-        <button>Articles</button>
+        <p id="title">Quiz Leen</p>
+        <a href="homePage.html">Home</a>
+        <a href="topics.html">Topics</a>
+        <a href="">Articles</a>
     </header>
     <main>
         <h2>heading for test</h2>
