--- a/topics.html
+++ b/topics.html
@@ -3,10 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Quiz Leen</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2>this is the Topics page</h2>
+    <header>
+        <p id="title">Quiz Leen</p>
+        <a href="homePage.html">Home</a>
+        <a href="topics.html">Topics</a>
+        <a href="">Articles</a>
+    </header>
+    <main>
+        <div class="catContainer">
+            <button class="category">Random</button>
+        <button class="category">Linux</button>
+        <button class="category">DevOps</button>
+        <button class="category">Networking</button>
+        <button class="category">Programming (PHP, JS, Python and etc.)</button>
+        <button class="category">Cloud</button>
+        <button class="category">Docker</button>
+        <button class="category">Kubernetes</button>
+        </div>
+    </main>
+    <footer>
+        <div class="navbar">
+            <p>Created by Pourya Fahimi, All Rights reserved</p>
+        </div>
+        <a id="imgLink" href="https://github.com/PouryaFahimi">
+            <img src="pics/githubLogo.png" alt="githubLogo">
+        </a>
+    </footer>
     <script src="receiver.js"></script>
 </body>
 </html>
