--- a/topics.html
+++ b/topics.html
@@ -15,14 +15,14 @@
     </header>
     <main>
         <div class="catContainer">
-            <button class="category">Random</button>
-        <button class="category">Linux</button>
-        <button class="category">DevOps</button>
-        <button class="category">Networking</button>
-        <button class="category">Programming (PHP, JS, Python and etc.)</button>
-        <button class="category">Cloud</button>
-        <button class="category">Docker</button>
-        <button class="category">Kubernetes</button>
+            <button class="category" style="background-color: black;">Random</button>
+            <button class="category" style="background-color: rgb(44, 62, 80);">Linux</button>
+            <button class="category" style="background-color: rgb(142, 68, 173);">DevOps</button>
+            <button class="category" style="background-color: rgb(41, 128, 185);">Networking</button>
+            <button class="category" style="background-color: rgb(39, 174, 96);">Programming (PHP, JS, Python and etc.)</button>
+            <button class="category" style="background-color: rgb(243, 156, 18);">Cloud</button>
+            <button class="category" style="background-color: rgb(211, 84, 0);">Docker</button>
+            <button class="category" style="background-color: rgb(192, 57, 43);">Kubernetes</button>
         </div>
     </main>
     <footer>
