--- a/examPage.html
+++ b/examPage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Leen</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="examStyle.css">
 </head>
 <body>
     <header>
@@ -15,28 +15,28 @@
     </header>
     <main>
         <h2>heading for test</h2>
+        <div class="quizHeader">
+            <h3>Question:</h3>
+            <h3 id="question">Question text</h3>
+        </div>
         <div class="quizContainer" id="quiz">
-                <div class="quizHeader">
-                    <h3>Question:</h3>
-                    <h3 id="question">Question text</h3>
-                </div>
-                <ul>
-                    <li>
-                        <input type="radio" id="a" name="answer" class="answer"><label id="a_text" for="a">Option</label>
-                    </li>
-                    <li>
-                        <input type="radio" id="b" name="answer" class="answer"><label id="b_text" for="b">Option</label>
-                    </li>
-                    <li>
-                        <input type="radio" id="c" name="answer" class="answer"><label id="c_text" for="c">Option</label>
-                    </li>
-                    <li>
-                        <input type="radio" id="d" name="answer" class="answer"><label id="d_text" for="d">Option</label>
-                    </li>
-                </ul>
-                <button id="submit">Submit</button>
-            </div>
-            <h3 id="feedback"></h3>
+            <ul>
+                <li>
+                    <input type="radio" id="a" name="answer" class="answer"><label id="a_text" for="a">Option</label>
+                </li>
+                <li>
+                    <input type="radio" id="b" name="answer" class="answer"><label id="b_text" for="b">Option</label>
+                </li>
+                <li>
+                    <input type="radio" id="c" name="answer" class="answer"><label id="c_text" for="c">Option</label>
+                </li>
+                <li>
+                    <input type="radio" id="d" name="answer" class="answer"><label id="d_text" for="d">Option</label>
+                </li>
+            </ul>
+            <button id="submit">Submit</button>
+        </div>
+        <h3 id="feedback"></h3>
     </main>
     <footer>
         <div class="navbar">
