--- a/examPage.html
+++ b/examPage.html
@@ -42,7 +42,7 @@
         <div class="navbar">
             <p>Created by Pourya Fahimi, All Rights reserved</p>
         </div>
-        <a href="https://github.com/PouryaFahimi">
+        <a id="imgLink" href="https://github.com/PouryaFahimi">
             <img src="pics/githubLogo.png" alt="githubLogo">
         </a>
     </footer>
