updated and matched

--- a/homePage.html
+++ b/homePage.html
@@ -16,7 +16,7 @@
     <main>
         <h2>heading for test</h2>
         <div class="quizContainer" id="quiz">
-                <div class="quizHeader">
+                <div id="quizHeader">
                     <h3>Question:</h3>
                     <h3 id="question">Question text</h3>
                 </div>
