--- a/examPage.html
+++ b/examPage.html
@@ -15,7 +15,7 @@
     </header>
     <main>
         <h2>heading for test</h2>
-        <div class="quizHeader">
+        <div id="quizHeader">
             <h3>Question:</h3>
             <h3 id="question">Question text</h3>
         </div>
