answers setting changed

--- a/examPage.html
+++ b/examPage.html
@@ -33,6 +33,12 @@
                 <li>
                     <input type="radio" id="d" name="answer" class="answer"><label id="d_text" for="d">Option</label>
                 </li>
+                <li>
+                    <input type="radio" id="e" name="answer" class="answer"><label id="e_text" for="e">Option</label>
+                </li>
+                <li>
+                    <input type="radio" id="f" name="answer" class="answer"><label id="f_text" for="f">Option</label>
+                </li>
             </ul>
             <button id="submit">Submit</button>
         </div>
