input style changed

--- a/examPage.html
+++ b/examPage.html
@@ -14,10 +14,9 @@
         <a href="">Articles</a>
     </header>
     <main>
-        <h2>heading for test</h2>
+        <h3>Question :</h3>
         <div id="quizHeader">
-            <h3>Question:</h3>
-            <h3 id="question">Question text</h3>
+            <p id="question">Question text</p>
         </div>
         <div class="quizContainer" id="quiz">
             <ul>
