--- a/examPage.html
+++ b/examPage.html
@@ -14,7 +14,7 @@
         <a href="">Articles</a>
     </header>
     <main>
-        <h3>Question :</h3>
+        <h3 id="questionTag">Question :</h3>
         <div id="quizHeader">
             <p id="question">Question text</p>
         </div>
