--- a/homePage.html
+++ b/homePage.html
@@ -14,29 +14,28 @@
         <a href="">Articles</a>
     </header>
     <main>
-        <h2>heading for test</h2>
+        <h3 id="questionTag">Question :</h3>
+        <div id="quizHeader">
+            <p id="question">Question text</p>
+        </div>
         <div class="quizContainer" id="quiz">
-                <div id="quizHeader">
-                    <h3>Question:</h3>
-                    <h3 id="question">Question text</h3>
-                </div>
-                <ul>
-                    <li>
-                        <input type="radio" id="a" name="answer" class="answer"><label id="a_text" for="a">Option</label>
-                    </li>
-                    <li>
-                        <input type="radio" id="b" name="answer" class="answer"><label id="b_text" for="b">Option</label>
-                    </li>
-                    <li>
-                        <input type="radio" id="c" name="answer" class="answer"><label id="c_text" for="c">Option</label>
-                    </li>
-                    <li>
-                        <input type="radio" id="d" name="answer" class="answer"><label id="d_text" for="d">Option</label>
-                    </li>
-                </ul>
-                <button id="submit">Submit</button>
-            </div>
-            <h3 id="feedback"></h3>
+            <ul>
+                <li>
+                    <input type="radio" id="a" name="answer" class="answer"><label id="a_text" for="a">Option</label>
+                </li>
+                <li>
+                    <input type="radio" id="b" name="answer" class="answer"><label id="b_text" for="b">Option</label>
+                </li>
+                <li>
+                    <input type="radio" id="c" name="answer" class="answer"><label id="c_text" for="c">Option</label>
+                </li>
+                <li>
+                    <input type="radio" id="d" name="answer" class="answer"><label id="d_text" for="d">Option</label>
+                </li>
+            </ul>
+            <button id="submit">Submit</button>
+        </div>
+        <h3 id="feedback"></h3>
     </main>
     <footer>
         <div class="navbar">
