--- a/topics.html
+++ b/topics.html
@@ -15,14 +15,15 @@
     </header>
     <main>
         <div class="catContainer">
+            <p style="font-size: 25px;">Select a category :</p>
             <button id="Random" class="category" style="background-color: black;">Random</button>
             <button id="Linux" class="category" style="background-color: rgb(44, 62, 80);">Linux</button>
             <button id="DevOps" class="category" style="background-color: rgb(142, 68, 173);">DevOps</button>
-            <button id="Networking" class="category" style="background-color: rgb(41, 128, 185);">Networking</button>
-            <button id="Programming" class="category" style="background-color: rgb(39, 174, 96);">Programming (PHP, JS, Python and etc.)</button>
-            <button id="Cloud" class="category" style="background-color: rgb(243, 156, 18);">Cloud</button>
+            <button id="SQL" class="category" style="background-color: rgb(41, 128, 185);">SQL</button>
+            <button id="Code" class="category" style="background-color: rgb(39, 174, 96);">Programming (PHP, JS, Python and etc.)</button>
+            <button id="CMS" class="category" style="background-color: rgb(243, 156, 18);">CMS</button>
             <button id="Docker" class="category" style="background-color: rgb(211, 84, 0);">Docker</button>
-            <button id="Kubernetes" class="category" style="background-color: rgb(192, 57, 43);">Kubernetes</button>
+            <button id="bash" class="category" style="background-color: rgb(192, 57, 43);">Bash</button>
         </div>
     </main>
     <footer>
