--- a/homePage.html
+++ b/homePage.html
@@ -14,6 +14,10 @@
         <a href="">Articles</a>
     </header>
     <main>
+        <div id="welcomBox">
+            <h2 id="welcomTitle">Welcom to Quiz Leen</h2>
+            <p>Test your knowledge, learn and enjoy</p>
+        </div>
         <h3 id="questionTag">Question :</h3>
         <div id="quizHeader">
             <p id="question">Question text</p>
