--- a/homePage.html
+++ b/homePage.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <p id="title">Quiz Leen</p>
+        <h3 id="title">Quiz Leen</h3>
         <a href="homePage.html">Home</a>
         <a href="topics.html">Topics</a>
         <a href="">Articles</a>
@@ -18,11 +18,12 @@
             <h2 id="welcomTitle">Welcom to Quiz Leen</h2>
             <p>Test your knowledge, learn and enjoy</p>
         </div>
-        <h3 id="questionTag">Question :</h3>
-        <div id="quizHeader">
-            <p id="question">Question text</p>
-        </div>
+        
         <div class="quizContainer" id="quiz">
+            <h3 id="questionTag">Question :</h3>
+            <div id="quizHeader">
+                <p id="question">Question text</p>
+            </div>
             <ul>
                 <li>
                     <input type="radio" id="a" name="answer" class="answer"><label id="a_text" for="a">Option</label>
