--- a/examPage.html
+++ b/examPage.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <p id="title">Quiz Leen</p>
+        <p class="title">Quiz Leen</p>
         <a href="homePage.html">Home</a>
         <a href="topics.html">Topics</a>
         <a href="">Articles</a>
