--- a/homePage.html
+++ b/homePage.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h3 id="title">Quiz Leen</h3>
+        <h3 class="title">Quiz Leen</h3>
         <a href="homePage.html">Home</a>
         <a href="topics.html">Topics</a>
         <a href="">Articles</a>
@@ -18,7 +18,10 @@
             <h2 id="welcomTitle">Welcom to Quiz Leen</h2>
             <p>Test your knowledge, learn and enjoy</p>
         </div>
-        
+        <div id="jumpToQuiz">
+            <h3 class="title">Let's start with a simple quiz</h3>
+            <p>This quiz is local and doesn't need to network</p>
+        </div>
         <div class="quizContainer" id="quiz">
             <h3 id="questionTag">Question :</h3>
             <div id="quizHeader">
