--- a/examPage.html
+++ b/examPage.html
@@ -19,7 +19,7 @@
             <div id="quizHeader">
                 <p id="question">Question text</p>
             </div>
-            <ul>
+            <ul class="borderBox">
                 <li>
                     <input type="radio" id="a" name="answer" class="answer"><label id="a_text" for="a">Option</label>
                 </li>
