danger section added

--- a/homePage.html
+++ b/homePage.html
@@ -24,6 +24,19 @@
             <p>This quiz is local and doesn't need to network</p>
         </div>
         </button>
+        <div class="borderBox">
+            <div id="notice">
+                <img src="pics/danger.png" alt="danger">
+                <h3 class="title">Pay Attention</h3>
+                <img src="pics/danger.png" alt="danger">
+            </div>
+            <p style="text-align: center;">
+                This webpage isn't complete and some parts are in the proccess of developing
+            </p>
+        </div>
+        <div class="borderBox">
+            <h3 class="title">Notes :</h3>
+        </div>
         <div class="quizContainer" id="quiz">
             <h3 id="questionTag">Question :</h3>
             <div id="quizHeader">
