home page almost completed

--- a/examPage.html
+++ b/examPage.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <header>
-        <p class="title">Quiz Leen</p>
-        <a href="homePage.html">Home</a>
-        <a href="topics.html">Topics</a>
-        <a href="">Articles</a>
+        <h3 class="title">Quiz Leen</h3>
+        <a class="topLink" href="homePage.html">Home</a>
+        <a class="topLink" href="topics.html">Topics</a>
+        <a class="topLink" href="">Articles</a>
     </header>
     <main>
         <div class="quizContainer" id="quiz">
