download preview added

--- a/examPage.html
+++ b/examPage.html
@@ -14,7 +14,11 @@
         <a class="topLink" href="">Articles</a>
     </header>
     <main>
-        <div class="quizContainer" id="quiz">
+        <div id="preview">
+            <img src="pics/download.png" alt="download">
+            <h3>Receiving questions ...</h3>
+        </div>
+        <div class="quizContainer" id="quiz" style="display: none;">
             <h3 id="questionTag">Question :</h3>
             <div id="quizHeader">
                 <p id="question">Question text</p>
