--- a/homePage.html
+++ b/homePage.html
@@ -10,7 +10,7 @@
     <header>
         <h3 class="title">Quiz Leen</h3>
         <a class="topLink" href="homePage.html">Home</a>
-        <a class="topLink" href="topics.html">Topics</a>
+        <a class="topLink" href="pages/topics.html">Topics</a>
         <a class="topLink" href="">Articles</a>
     </header>
     <main>
@@ -71,6 +71,6 @@
             <img src="pics/githubLogo.png" alt="githubLogo">
         </a>
     </footer>
-    <script src="script.js"></script>
+    <script src="scripts/homeScript.js"></script>
 </body>
 </html>
