--- a/pages/examPage.html
+++ b/pages/examPage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Leen</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <header>
@@ -55,6 +55,6 @@
             <img src="pics/githubLogo.png" alt="githubLogo">
         </a>
     </footer>
-    <script src="examScript.js"></script>
+    <script src="../scripts/examScript.js"></script>
 </body>
 </html>
