--- a/pages/topics.html
+++ b/pages/topics.html
@@ -34,6 +34,6 @@
             <img src="pics/githubLogo.png" alt="githubLogo">
         </a>
     </footer>
-    <script src="topicScript.js"></script>
+    <script src="../scripts/topicScript.js"></script>
 </body>
 </html>
