updated with error handling

--- a/homePage.html
+++ b/homePage.html
@@ -24,7 +24,7 @@
                 <p>This quiz is local and doesn't need to network</p>
             </div>
         </button>
-        <a href="topics.html">
+        <a href="pages/topics.html">
             <div id="topicBox">
                 <h2 class="welcomTitle">Explore Topics</h2>
                 <p>Choose one from various categories</p>
