--- a/pages/topics.html
+++ b/pages/topics.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Leen</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <header>
         <h3 class="title">Quiz Leen</h3>
-        <a class="topLink" href="homePage.html">Home</a>
+        <a class="topLink" href="../homePage.html">Home</a>
         <a class="topLink" href="topics.html">Topics</a>
         <a class="topLink" href="">Articles</a>
     </header>
@@ -31,7 +31,7 @@
             <p>Created by Pourya Fahimi, All Rights reserved</p>
         </div>
         <a id="imgLink" href="https://github.com/PouryaFahimi">
-            <img src="pics/githubLogo.png" alt="githubLogo">
+            <img src="../pics/githubLogo.png" alt="githubLogo">
         </a>
     </footer>
     <script src="../scripts/topicScript.js"></script>
