--- a/homePage.html
+++ b/homePage.html
@@ -11,7 +11,7 @@
         <h3 class="title">Quiz Leen</h3>
         <a class="topLink" href="homePage.html">Home</a>
         <a class="topLink" href="pages/topics.html">Topics</a>
-        <a class="topLink" href="">Articles</a>
+        <a class="topLink">Articles</a>
     </header>
     <main>
         <div id="welcomBox">
