--- a/pages/topics.html
+++ b/pages/topics.html
@@ -1,39 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz Leen</title>
-    <link rel="stylesheet" href="../style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="../style.css" />
+  </head>
+  <body>
     <header>
-        <h3 class="title">Quiz Leen</h3>
-        <a class="topLink" href="../homePage.html">Home</a>
-        <a class="topLink" href="topics.html">Topics</a>
-        <a class="topLink">Articles</a>
+      <h3 class="title">Quiz Leen</h3>
+      <a class="topLink" href="../homePage.html">Home</a>
+      <a class="topLink" href="topics.html">Topics</a>
+      <a class="topLink">Articles</a>
     </header>
     <main>
-        <div class="catContainer">
-            <p style="font-size: 25px;">Select a category :</p>
-            <button id="Random" class="category" style="background-color: black;">Random</button>
-            <button id="Linux" class="category" style="background-color: rgb(44, 62, 80);">Linux</button>
-            <button id="DevOps" class="category" style="background-color: rgb(142, 68, 173);">DevOps</button>
-            <button id="SQL" class="category" style="background-color: rgb(41, 128, 185);">SQL</button>
-            <button id="Code" class="category" style="background-color: rgb(39, 174, 96);">Programming (PHP, JS, Python and etc.)</button>
-            <button id="CMS" class="category" style="background-color: rgb(243, 156, 18);">CMS</button>
-            <button id="Docker" class="category" style="background-color: rgb(211, 84, 0);">Docker</button>
-            <button id="bash" class="category" style="background-color: rgb(192, 57, 43);">Bash</button>
-        </div>
+      <div class="catContainer">
+        <p style="font-size: 3vh">Select a category :</p>
+        <button id="Random" class="category" style="background-color: black">
+          Random
+        </button>
+        <button
+          id="Linux"
+          class="category"
+          style="background-color: rgb(44, 62, 80)"
+        >
+          Linux
+        </button>
+        <button
+          id="DevOps"
+          class="category"
+          style="background-color: rgb(142, 68, 173)"
+        >
+          DevOps
+        </button>
+        <button
+          id="SQL"
+          class="category"
+          style="background-color: rgb(41, 128, 185)"
+        >
+          SQL
+        </button>
+        <button
+          id="Code"
+          class="category"
+          style="background-color: rgb(39, 174, 96)"
+        >
+          Programming (PHP, JS, Python and etc.)
+        </button>
+        <button
+          id="CMS"
+          class="category"
+          style="background-color: rgb(243, 156, 18)"
+        >
+          CMS
+        </button>
+        <button
+          id="Docker"
+          class="category"
+          style="background-color: rgb(211, 84, 0)"
+        >
+          Docker
+        </button>
+        <button
+          id="bash"
+          class="category"
+          style="background-color: rgb(192, 57, 43)"
+        >
+          Bash
+        </button>
+      </div>
     </main>
     <footer>
-        <div class="navbar">
-            <p>Created by Pourya Fahimi, All Rights reserved</p>
-        </div>
-        <a id="imgLink" href="https://github.com/PouryaFahimi">
-            <img src="../pics/githubLogo.png" alt="githubLogo">
-        </a>
+      <div class="navbar">
+        <p>Created by Pourya Fahimi, All Rights reserved</p>
+      </div>
+      <a id="imgLink" href="https://github.com/PouryaFahimi">
+        <img src="../pics/githubLogo.png" alt="githubLogo" />
+      </a>
     </footer>
     <script src="../scripts/topicScript.js"></script>
-</body>
+  </body>
 </html>
