--- a/pages/topics.html
+++ b/pages/topics.html
@@ -15,6 +15,19 @@
       <a class="topLink">Articles</a>
     </header>
     <main>
+      <div class="catHeader">
+        <button class="category" style="background-color: black">Tags</button>
+        <input type="radio" class="quizDetails" id="quizNum5" name="quizNum" />
+        <label for="quizNum5" class="details">5</label>
+        <input type="radio" class="quizDetails" id="quizNum10" name="quizNum" />
+        <label for="quizNum10" class="details">10</label>
+        <input type="radio" class="quizDetails" id="easy" name="level" />
+        <label for="easy" class="details">easy</label>
+        <input type="radio" class="quizDetails" id="medium" name="level" />
+        <label for="medium" class="details">medium</label>
+        <input type="radio" class="quizDetails" id="hard" name="level" />
+        <label for="hard" class="details">hard</label>
+      </div>
       <div class="catContainer">
         <p style="font-size: 3vh">Select a category :</p>
         <button id="Random" class="category" style="background-color: black">
