quiz details style almost complete

--- a/pages/topics.html
+++ b/pages/topics.html
@@ -16,7 +16,10 @@
     </header>
     <main>
       <div class="catHeader">
-        <button class="category" style="background-color: black">Tags</button>
+        <button class="category" style="background-color: black">
+          Tags
+          <img src="../pics/right-arrow.png" alt="right-arrow" />
+        </button>
         <div class="detailBox">
           <input
             type="radio"
