limit number and difficulty added beside of new font

--- a/pages/topics.html
+++ b/pages/topics.html
@@ -26,6 +26,8 @@
             class="quizDetails"
             id="quizNum5"
             name="quizNum"
+            value="5"
+            checked
           />
           <label for="quizNum5" class="details">5</label>
           <input
@@ -33,6 +35,7 @@
             class="quizDetails"
             id="quizNum10"
             name="quizNum"
+            value="10"
           />
           <label for="quizNum10" class="details">10</label>
         </div>
@@ -46,7 +49,7 @@
         </div>
       </div>
       <div class="catContainer">
-        <p style="font-size: 3vh">Select a category :</p>
+        <p style="font-size: 2rem">Select a category :</p>
         <button id="Random" class="category" style="background-color: black">
           Random
         </button>
