--- a/pages/examPage.html
+++ b/pages/examPage.html
@@ -17,7 +17,7 @@
     <main>
         <div id="preview">
             <img src="../pics/download.png" alt="download">
-            <h3>Receiving questions ...</h3>
+            <h3>Receiving Questions ...</h3>
         </div>
         <div id="error" style="display: none;">
             <img src="../pics/error.png" alt="error">
